syntax = "proto3";

package product;

option go_package = "github.com/microservice-go/product-service/proto/product";

import "google/protobuf/timestamp.proto";

// Product Service Definition
service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

// Product Messages
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string product_type = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string product_type = 4;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string product_type = 5;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message ListProductsRequest {
  string product_type = 1; // optional filter
  int32 page = 2;
  int32 page_size = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message ProductResponse {
  Product product = 1;
}

